Update Vampire Face Fixes (#808)
* Add section
  * Fixes.
  * For mods that fix bugs with game.

* Move plugin
  * To 'Fixes' section.
  * Fixes cosmetic bugs with player vampire.

* Add location
  * https://www.nexusmods.com/skyrim/mods/13490/

* Remove unaliased message
  * Explained in description & readme.
  * Can be seen & patched with, e.g., xEdit.

* Add `alreadyInOrFixedByUSLEEP` message
  * Stated by author as fixed by USLEEP at some point.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -765,6 +765,13 @@ plugins:
         name: 'Unofficial High Resolution Patch'
     group: *unofficialPatchGroup
 
+###### Fixes ######
+  - name: 'Vampire Face Fixes.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/13490/'
+        name: 'Vampire Face Fixes'
+    msg: [ *alreadyInOrFixedByUSLEEP ]
+
 ###### Modding Tools - Generated Files ######
   - name: 'Occlusion.esp'
     url:
@@ -4392,18 +4399,7 @@ plugins:
         condition: 'not file("HighResTexturePack01.esp")'
   - name: 'Stahlrim Arrow Projectile Fix.esp'
     msg: [ *alreadyInOrFixedByUSLEEP ]
-  - name: 'Vampire Face Fixes.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'This mod will not be compatible with any mods that alter the vampire character classes.'
-          - lang: de
-            text: 'Diese Mod ist nicht mit Mods kompatibel, die die Vampir-Charakterklassen ändern.'
-          - lang: ja
-            text: 'このModは吸血鬼のキャラクタークラスを改変するModとは両立できません。'
-          - lang: ru
-            text: 'Этот мод может быть несовместим с любыми модами, меняющими классы персонажей вампиров.'
+
   - name: 'USKP Dawnguard vampire face & eye fix.esp'
     msg: [ *alreadyInOrFixedByUSLEEP ]
   - name: 'Weapons & Armor Fixes_Remade.esp'
