--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2060,6 +2060,9 @@ plugins:
 
 ###### Gameplay - Magic & Abilities ######
   - name: 'BanishLight.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/18788/'
+        name: 'Illusion Spell - Banish Light'
     msg:
       - type: warn
         content:
