Add cleaning data
  * v1.2.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2063,6 +2063,11 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/18788/'
         name: 'Illusion Spell - Banish Light'
+    dirty:
+      - <<: *quickClean
+        crc: 0xAF09FC90
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 37
 
   - name: 'iMaxPlayerRunes0\d{2}\.esp'
     url:
