Update Illusion Spell - Banish Light (#809)
* Move plugin
  * To 'Gameplay - Magic & Abilities' section.
  * Adds spell.

* Add location
  * https://www.nexusmods.com/skyrim/mods/18788/

* Remove unaliased message
  * Explained in description & readme.

* Add cleaning data
  * v1.2.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2059,6 +2059,16 @@ plugins:
     tag: [ Relev ]
 
 ###### Gameplay - Magic & Abilities ######
+  - name: 'BanishLight.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/18788/'
+        name: 'Illusion Spell - Banish Light'
+    dirty:
+      - <<: *quickClean
+        crc: 0xAF09FC90
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 37
+
   - name: 'iMaxPlayerRunes0\d{2}\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/3822/'
@@ -19744,18 +19754,7 @@ plugins:
         subs: [ 'ArcaneFist .esp file' ]
   - name: 'ASX( - |_)Spells\.esp'
     req: [ *FNIS ]
-  - name: 'BanishLight.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'May not work properly with lighting mods.'
-          - lang: de
-            text: 'Funktioniert möglicherweise nicht richtig mit Beleuchtungsmods.'
-          - lang: ja
-            text: '光源Modと同時に使用すると正常に機能しない場合があります。'
-          - lang: ru
-            text: 'Может неверно работать с модами, меняющими освещение..'
+
   - name: 'BardSvaknirSummon.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/17677/'
