Update name [REWORD]
  * Encapsulate in single quotes.
  * Introduced in # 136. [REWORD]

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2251,7 +2251,7 @@ plugins:
             text: 'Этот патч используется только совместимой с Moonlight Tales версией Werewolf Mastery.'
   - name: 'BetterQuestObjectives-MoonlightPatch.esp'
     inc: [ 'BetterQuestObjectives-MoonlightMasteryPatch.esp' ]
-  - name: BetterQuestObjectives-RequiemPatch.esp
+  - name: 'BetterQuestObjectives-RequiemPatch.esp'
     after: [ 'ESFCompanions.esp' ]
     msg:
       - <<: *alreadyInX
