--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2206,6 +2206,7 @@ plugins:
       - crc: 0x39EA9697
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'BetterQuestObjectives(-DBForevertoMisc| ?-.+Patch)?\.esp'
   - name: 'BetterQuestObjectives.esp'
     group: *underridesGroup
     msg:
@@ -2236,6 +2237,7 @@ plugins:
         subs: [ 'Requiem - Cutting Room Floor.esp' ]
   - name: 'BetterQuestObjectives-ESFCompanionsPatch.esp'
     after: [ 'Brevi_MoonlightTales.esp' ]
+  - name: 'BetterQuestObjectives-Moonlight(Mastery)?Patch\.esp'
   - name: 'BetterQuestObjectives-MoonlightMasteryPatch.esp'
     inc: [ 'BetterQuestObjectives-MoonlightPatch.esp' ]
     msg:
