--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2207,6 +2207,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'BetterQuestObjectives(-DBForevertoMisc| ?-.+Patch)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/32695/'
+        name: 'Even Better Quest Objectives'
   - name: 'BetterQuestObjectives.esp'
     group: *underridesGroup
     msg:
