Update `alreadyInX` messages
  * Sort `subs` keys before `condition` keys.
  * Embolden filenames in `subs`.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2224,8 +2224,8 @@ plugins:
   - name: 'BetterQuestObjectives-AlternateStartPatch.esp'
     msg:
       - <<: *alreadyInX
+        subs: [ '**Requiem - Live Another Life.esp**' ]
         condition: 'active("Requiem - Live Another Life.esp")'
-        subs: [ 'Requiem - Live Another Life.esp' ]
   - name: 'BetterQuestObjectives-AMBSkyforgePatch.esp'
     after: [ 'ESFCompanions.esp' ]
   - name: 'BetterQuestObjectives-BSaQBPatch.esp'
@@ -2236,8 +2236,8 @@ plugins:
   - name: 'BetterQuestObjectives-CRFPatch.esp'
     msg:
       - <<: *alreadyInX
+        subs: [ '**Requiem - Cutting Room Floor.esp**' ]
         condition: 'active("Requiem - Cutting Room Floor.esp")'
-        subs: [ 'Requiem - Cutting Room Floor.esp' ]
   - name: 'BetterQuestObjectives-ESFCompanionsPatch.esp'
     after: [ 'Brevi_MoonlightTales.esp' ]
   - name: 'BetterQuestObjectives-Moonlight(Mastery)?Patch\.esp'
@@ -2262,7 +2262,7 @@ plugins:
     after: [ 'ESFCompanions.esp' ]
     msg:
       - <<: *alreadyInX
-        subs: [ 'Requiem.esp' ]
+        subs: [ '**Requiem.esp**' ]
         condition: 'active("Requiem.esp")'
 
   - name: 'Hebrock_Der Schatten von Meresis.esp'
