Refactor `requiresX` message [REWORD]
  * With regex.
  * Corrects condition as the message would only be hidden with both
    plugins installed. Introduced in boss-developers/skyrim@929cfc 2. [REWORD]

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2232,7 +2232,7 @@ plugins:
     msg:
       - <<: *requiresX
         subs: [ '[Better Skill and Quest Books Names](https://www.nexusmods.com/skyrim/mods/10125/)' ]
-        condition: 'not file("Better Skill and Quest Books Names.esp") or not file("Better Skill and Quest Books Names - BS.esp")'
+        condition: 'not file("Better Skill and Quest Books Names( - BS)?\.esp")'
   - name: 'BetterQuestObjectives-CRFPatch.esp'
     msg:
       - <<: *alreadyInX
