--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1380,6 +1380,9 @@ plugins:
 
 ###### Encounters - Allies ######
   - name: 'BreezeDog.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8753/'
+        name: 'Breezehome Dog'
     msg:
       - type: say
         content:
