Add cleaning data
  * v12.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1383,6 +1383,11 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/8753/'
         name: 'Breezehome Dog'
+    dirty:
+      - <<: *quickClean
+        crc: 0x09F92669
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 1
 
   - name: 'CompanionArissa.esm'
     url:
