Update Breezehome Dog (#811)
* Move plugin
  * To 'Encounters - Allies' section.
  * Adds a pet dog.

* Add location
  * https://www.nexusmods.com/skyrim/mods/8753/

* Remove unaliased message
  * Can probably be patched easily by moving the dog.

* Add cleaning data
  * v12.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1379,6 +1379,16 @@ plugins:
     msg: [ *obsolete ]
 
 ###### Encounters - Allies ######
+  - name: 'BreezeDog.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8753/'
+        name: 'Breezehome Dog'
+    dirty:
+      - <<: *quickClean
+        crc: 0x09F92669
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 1
+
   - name: 'CompanionArissa.esm'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/53754/'
@@ -5505,20 +5515,7 @@ plugins:
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 83
         udr: 436
-  - name: 'BreezeDog.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'This may not work with some breezehome altering mods.'
-          - lang: de
-            text: 'Dies funktioniert möglicherweise nicht mit einigen Brisenheim-verändernden Mods (eng: Breezehome).'
-          - lang: es
-            text: 'Este mod no funcionará con algunos mods que modifiquen Breezehome.'
-          - lang: ja
-            text: 'ブリーズホームを改変するModと同時に使うと機能しない場合があります。'
-          - lang: ru
-            text: 'Может не работать с некоторыми модами, меняющими Дом Теплых ветров(Breezehome).'
+
   - name: 'Calendar - (Deutsch|English|Francais|Italiano|Russian|Spanish)\.esp'
     inc:
       - 'ModernDayCalendarNames.esp'
