--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1270,7 +1270,9 @@ plugins:
         util: 'TES5Edit v4.0.2f'
 
   - name: 'Creepy Dungeons.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/12808/' ]
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/12808/'
+        name: 'Creepy Dungeons'
     msg:
       - type: warn
         content:
