--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1591,7 +1591,7 @@ plugins:
         itm: 7
 
 ###### Gameplay ######
-  - name: 'Better Followers - (S)?(B)?(N)?P\.esp'
+  - name: 'Better Followers - S?B?N?P\.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/7554/' ]
     inc: [ 'TCG.esp' ]
     msg:
@@ -1636,7 +1636,7 @@ plugins:
         crc: 0x7514FA0B
         util: '[TES5Edit v4.0.3f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 4
-  - name: 'Better Followers - SB(N)?P\.esp'
+  - name: 'Better Followers - SBN?P\.esp'
     msg:
       - <<: *requiresX
         subs: [ 'Better Followers - Armor Pack I' ]
