--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1591,6 +1591,7 @@ plugins:
         itm: 7
 
 ###### Gameplay ######
+  - name: 'Better (Followers - S?B?N?P|NPC - Faction Pack)\.esp'
   - name: 'Better Followers - S?B?N?P\.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/7554/' ]
     inc: [ 'TCG.esp' ]
