--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1592,8 +1592,10 @@ plugins:
 
 ###### Gameplay ######
   - name: 'Better (Followers - S?B?N?P|NPC - Faction Pack)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/7554/'
+        name: 'Better Followers'
   - name: 'Better Followers - S?B?N?P\.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/7554/' ]
     inc: [ 'TCG.esp' ]
     msg:
       - <<: *useOnlyOneX
