Update `requiresX` message
  * Make subs more descriptive.
  * Active status check preferred.
  * Slightly simplify condition regex.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1657,8 +1657,8 @@ plugins:
   - name: 'Better NPC - Faction Pack.esp'
     msg:
       - <<: *requiresX
-        subs: [ 'Beautiful ESP' ]
-        condition: 'not file("Better Followers - (S)?B(N)?P\.esp")'
+        subs: [ 'Better Followers Beauty ESP' ]
+        condition: 'not active("Better Followers - S?BN?P\.esp")'
     dirty:
       - <<: *quickClean
         crc: 0xBDC85BE7
