Update `useOnlyOneX` message
  * Slightly simplify condition regex.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1600,7 +1600,7 @@ plugins:
     msg:
       - <<: *useOnlyOneX
         subs: [ 'Better Followers ESP' ]
-        condition: 'many("Better Followers - (S)?(B)?(N)?P\.esp")'
+        condition: 'many("Better Followers - S?B?N?P\.esp")'
   - name: 'Better Followers - BNP.esp'
     dirty:
       - <<: *quickClean
