--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -953,6 +953,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'dD - Realistic Ragdoll Force - (Realistic|Reduced|Medium|High)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/601/'
+        name: 'Realistic Ragdolls and Force'
     after: [ 'Requiem.esp' ]
     msg:
       - type: say
