Update `alreadyInX` message
  * Sort `subs` key before `condition` key.
  * Embolden filename in `subs`.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -959,8 +959,8 @@ plugins:
     after: [ 'Requiem.esp' ]
     msg:
       - <<: *alreadyInX
+        subs: [ '**XPMSE.esp**' ]
         condition: 'active("XPMSE.esp")'
-        subs: [ 'XPMSE.esp' ]
 
   - name: 'GuardAnimations(GDO)?\.esp'
     url:
