--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2922,6 +2922,9 @@ plugins:
         nav: 3
 
   - name: 'Earthmist hollow.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/20550/'
+        name: 'Earthmist Hollow'
     msg:
       - type: say
         content:
