Add cleaning data
  * v1.01.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2925,6 +2925,17 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/20550/'
         name: 'Earthmist Hollow'
+    dirty:
+      - <<: *reqManualFix
+        crc: 0x9A08B9B1
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 266
+        udr: 6
+        nav: 1
+      - <<: *reqManualFix
+        crc: 0xD6ADAFF5
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        nav: 1
 
   - name: 'HeljarchenFarm.esp'
     url:
