Update Earthmist Hollow (#816)
* Move plugin
  * To 'Locations - Player Homes' section.
  * Adds a player home.

* Add location
  * https://www.nexusmods.com/skyrim/mods/20550/

* Remove unaliased message
  * Explained in desc.

* Add cleaning data
  * v1.01.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2921,6 +2921,22 @@ plugins:
         util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
         nav: 3
 
+  - name: 'Earthmist hollow.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/20550/'
+        name: 'Earthmist Hollow'
+    dirty:
+      - <<: *reqManualFix
+        crc: 0x9A08B9B1
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 266
+        udr: 6
+        nav: 1
+      - <<: *reqManualFix
+        crc: 0xD6ADAFF5
+        util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
+        nav: 1
+
   - name: 'HeljarchenFarm.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/50992/'
@@ -13171,18 +13187,7 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 90
         udr: 4
-  - name: 'Earthmist hollow.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'The plugin is partially companion-friendly. However, they cannot pass through vine doors despite navmeshes.'
-          - lang: de
-            text: 'Das Plugin ist teilweise Begleiter-freundlich. Trotz Navmeshes können diese jedoch nicht durch Lianen-Tore gehen.'
-          - lang: ja
-            text: 'ある程度は仲間も移動できるように作られていますが、ツタの扉はnavmeshesがあるにもかかわらず通行できません。'
-          - lang: ru
-            text: 'Плагин является частично дружественным к компаньонам. Компаньоны не смогут проходить через двери.'
+
   - name: 'EBM.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/14938/' ]
     msg:
