--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2277,6 +2277,8 @@ plugins:
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 2
 
+###### Gameplay - NPC Balance & Distribution ######
+
 ###### Gameplay - NPC Behaviour & Dialogue ######
   - name: 'CompanionsAriseFinal.esp'
     url:
