--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2279,6 +2279,9 @@ plugins:
 
 ###### Gameplay - NPC Balance & Distribution ######
   - name: 'JMO-Dragons.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/10489/'
+        name: 'Jehoram''s Modular Overhaul - Dragons'
     msg:
       - type: say
         content:
