Replace unaliased message
  * With incompatibility.
  * Explained in desc., Deadly Dragons specifically mentioned.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2282,17 +2282,7 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/10489/'
         name: 'Jehoram''s Modular Overhaul - Dragons'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Posible conflicts with other Dragon mods'
-          - lang: de
-            text: 'Mögliche Konflikte mit anderen Drachen Mods.'
-          - lang: ja
-            text: '他のドラゴンModと競合する可能性があります。'
-          - lang: ru
-            text: 'Возможны конфликты с модами, меняющими драконов.'
+    inc: [ 'DeadlyDragons.esp' ]
 
 ###### Gameplay - NPC Behaviour & Dialogue ######
   - name: 'CompanionsAriseFinal.esp'
