Update Jehoram's Modular Overhaul - Dragons (#818)
* Add section
  * Gameplay - NPC Balance & Distribution.
  * For mods that change balancing or distribution of actors.

* Move plugin
  * To 'Gameplay - NPC Balance & Distribution' section.
  * Rebalances dragons.

* Add location
  * https://www.nexusmods.com/skyrim/mods/10489/

* Replace unaliased message
  * With incompatibility.
  * Explained in desc., Deadly Dragons specifically mentioned.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2277,6 +2277,13 @@ plugins:
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 2
 
+###### Gameplay - NPC Balance & Distribution ######
+  - name: 'JMO-Dragons.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/10489/'
+        name: 'Jehoram''s Modular Overhaul - Dragons'
+    inc: [ 'DeadlyDragons.esp' ]
+
 ###### Gameplay - NPC Behaviour & Dialogue ######
   - name: 'CompanionsAriseFinal.esp'
     url:
@@ -17826,18 +17833,7 @@ plugins:
         itm: 1
   - name: 'Jarls sit up straight.esp'
     inc: [ 'Jarls sit up straight except Falkreath jarl.esp' ]
-  - name: 'JMO-Dragons.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Posible conflicts with other Dragon mods'
-          - lang: de
-            text: 'Mögliche Konflikte mit anderen Drachen Mods.'
-          - lang: ja
-            text: '他のドラゴンModと競合する可能性があります。'
-          - lang: ru
-            text: 'Возможны конфликты с модами, меняющими драконов.'
+
   - name: 'Ket_ARMONIZER_v2.esp'
     msg: [ *obsolete ]
   - name: 'Ket_ARMONIZER_LListsNPC.esp'
